design toggle-switch components

--- a/src/assets/stylus/_variables.styl
+++ b/src/assets/stylus/_variables.styl
@@ -1,5 +1,7 @@
 font-size = 1.6rem
 color-txt-primary = #000
+color-txt-secondary = #fff
 color-bg-primary = #bbb
+color-bg-secondary = #555
 height-nav = 9vh
 height-content = 91vh
