implement SETTINGS view

--- a/src/assets/stylus/_variables.styl
+++ b/src/assets/stylus/_variables.styl
@@ -3,5 +3,6 @@ color-txt-primary = #000
 color-txt-secondary = #fff
 color-bg-primary = #bbb
 color-bg-secondary = #555
+color-bg-input = #fff
 height-nav = 9vh
 height-content = 91vh
