add COLOR + TRANSITION EFFECTS

--- a/src/assets/stylus/_variables.styl
+++ b/src/assets/stylus/_variables.styl
@@ -1,8 +1,10 @@
 font-size = 1.6rem
-color-txt-primary = #000
-color-txt-secondary = #fff
-color-bg-primary = #bbb
-color-bg-secondary = #555
+color-bg-primary = #283593
+color-txt-primary = #fff
+color-bg-secondary = #fff
+color-txt-secondary = #000
 color-bg-input = #fff
+color-bg-input-inactive = #bbb
+color-action = #289386
 height-nav = 9vh
 height-content = 91vh
