make responsive for landscape

--- a/src/assets/stylus/_variables.styl
+++ b/src/assets/stylus/_variables.styl
@@ -8,3 +8,5 @@ color-bg-input-inactive = #bbb
 color-action = #289386
 height-nav = 9vh
 height-content = 91vh
+landscape-height-nav = 13vh
+landscape-height-content = 87vh
